@@ -2443,7 +2443,8 @@ option name and value. See <strong>Options</strong> below for more details.  If
 <em>position</em> is given as an integer, the new download is inserted at
 <em>position</em> in the waiting queue. If <em>position</em> is not given or
 <em>position</em> is larger than the size of the queue, it is appended at the
-end of the queue.  This method returns GID of registered download.</p></div>
+end of the queue.  This method returns array of GID of registered
+download.</p></div>
 <div class="paragraph"><p><strong>aria2.remove</strong> <em>gid</em></p></div>
 <div class="paragraph"><p>This method removes the download denoted by <em>gid</em>. <em>gid</em> is of type
 string. If specified download is in progress, it is stopped at
@@ -3147,7 +3148,7 @@ files in the program, then also delete it here.</p></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2009-05-30 23:11:48 JST
+Last updated 2009-05-31 22:30:09 JST
 </div>
 </div>
 </body>
