@@ -1072,7 +1072,8 @@ option name and value. See *Options* below for more details.  If
 'position' is given as an integer, the new download is inserted at
 'position' in the waiting queue. If 'position' is not given or
 'position' is larger than the size of the queue, it is appended at the
-end of the queue.  This method returns GID of registered download.
+end of the queue.  This method returns array of GID of registered
+download.
 
 *aria2.remove* 'gid'
 
